# spectral-csi

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INTERIM_REPORT.md  LICENSE  README.md  paper.typ  pyproject.toml  quickstart.py  requirements.txt  setup.py
configs/: default_config.yaml  example_config.json
core/: __init__.py  bayesian_model.py  hypothesis_test.py  spectrum_analyzer.py
data/: __init__.py  synthetic_csi.py
notebooks/: demo_notebook.md
simulation/: __init__.py
src/: inference.py  train.py
src/spectral_csi/: __init__.py
src/spectral_csi/optimization/: __init__.py
src/spectral_csi/preprocessing/: __init__.py
src/spectral_csi/utils/: __init__.py  data_utils.py
tests/: test_spectral_csi.py
